syntax = "proto3";
package conserjeria;

option java_package = "cl.ucn.disc.as.conserjeria.grpc";
option java_multiple_files = true;
option optimize_for = CODE_SIZE;

message PersonaGrpc {
  string rut = 1;
  string nombre = 2;
  string apellidos = 3;
  string email = 4;
  string telefono = 5;
}

//peticion de persona
message PersonaGrpcRequest {
  string rut = 1;
}

// respuesta de persona
message PersonaGrpcResponse {
  PersonaGrpc persona = 1;
}

service PersonaGrpcService {
  rpc retrieve(PersonaGrpcRequest) returns (PersonaGrpcResponse);
}